Archive2/59/76a6059a02495c/output
In file included from /usr/local/include/c++/4.9.2/bits/stl_algobase.h:71:0,
                 from /usr/local/include/c++/4.9.2/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.2/string:40,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/predefined_ops.h: In instantiation of 'bool __gnu_cxx::__ops::_Iter_pred<_Predicate>::operator()(_Iterator) [with _Iterator = __gnu_cxx::__normal_iterator<char*, std::basic_string<char> >; _Predicate = char]':
/usr/local/include/c++/4.9.2/bits/stl_algo.h:866:28:   required from '_ForwardIterator std::__remove_if(_ForwardIterator, _ForwardIterator, _Predicate) [with _ForwardIterator = __gnu_cxx::__normal_iterator<char*, std::basic_string<char> >; _Predicate = __gnu_cxx::__ops::_Iter_pred<char>]'
/usr/local/include/c++/4.9.2/bits/stl_algo.h:937:47:   required from '_FIter std::remove_if(_FIter, _FIter, _Predicate) [with _FIter = __gnu_cxx::__normal_iterator<char*, std::basic_string<char> >; _Predicate = char]'
main.cpp:10:53:   required from here
/usr/local/include/c++/4.9.2/bits/predefined_ops.h:231:30: error: expression cannot be used as a function
  { return bool(_M_pred(*__it)); }
                              ^
